idf_component_register(SRCS "myapp.c"
                            "mygpio.c"
                            "mywifi.c"
                            "mysocket.c"
                            "myhttps.c"
                            "utils.c"
                            "oled.c"
                    INCLUDE_DIRS "")