idf_component_register(SRCS "myapp.c"
                            "mygpio.c"
                            "mywifi.c"
                            "mysocket.c"
                            "mysntp.c"
                            "utils.c"
                            "oled.c"
                            "max7219.c"
                    INCLUDE_DIRS "")