idf_component_register(SRCS "myapp.c"
                            "mygpio.c"
                            "mywifi.c"
                            "mysocket.c"
                            "mysntp.c"
                            "bitled.c"
                            "utils.c"
                            "oled.c"
                            "max7219.c"
                            "dht11.c"
                    INCLUDE_DIRS "")
